--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Ignorar node_modules dos dois lados
-frontend/node_modules/
+frontend/ERP-Gerencial/node_modules/
 backend/node_modules/
 
 # Ignorar dist (builds)
-frontend/dist/
+frontend/ERP-Gerencial/dist/
 backend/dist/
 
 # Variáveis de ambiente
-frontend/.env
+frontend/ERP-Gerencial/.env
 backend/.env
 
 # Sistema
